♻️ refactor(collector): TASK-012 시딩 도구 PMD 위반 수정(단일 책임 분리)
MarketCalendarSeedTool의 KRX 순차 조회·SQL 출력 절차를 각각 KrxCalendarSourceFetcher·
MarketCalendarSqlWriter로 추출하고, 실제 시딩 절차는 MarketCalendarSeedService(Spring
빈 아님, 수동 생성)로 위임한다. MarketCalendarSeedTool 자체는 @Profile 게이트+얇은
CommandLineRunner 래퍼로 축소되어 PMD CouplingBetweenObjects/ExcessiveImports를
해소한다. KRX 조회 실패 처리도 catch(RuntimeException) 대신 MarketCalendarRefreshScheduler와
동일한 구체 예외 목록(RestClientException/KisApiBusinessException/KisRateLimitException/
IllegalStateException)으로 좁혀 PMD AvoidCatchingGenericException·ReturnEmptyCollectionRatherThanNull을
해소했다(Optional<List<HolidayRow>> 반환으로 전환).

MismatchClusterClassifierTest: get(0) → getFirst()(PMD UseGetFirst), System.out.println →
SLF4J 로거(PMD SystemPrintln)로 교체.

동작 변경 없음 — 기존 단위 테스트 전건 GREEN 유지.